--- a/locationfinder/app.json
+++ b/locationfinder/app.json
@@ -1,28 +1,38 @@
 {
   "expo": {
-    "name": "locationfinder",
-    "slug": "locationfinder",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
-    "version": "1.0.0",
-    "orientation": "portrait",
+    "name": "Campus Crawler",
     "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "version": "1.0.0",
+    "slug": "campus-crawler",
+    "sdkVersion": "37.0.0",
     "ios": {
-      "supportsTablet": true
-    }
-  }
+      "bundleIdentifier": "com.yourcompany.yourappname",
+      "buildNumber": "1.0.0"
+    },
+    "android": {
+      "package": "com.stetson.campuscrawler",
+      "versionCode": 1
+    },
+    "description": "Campus Crawler project for CINF304",
+    "githubUrl": "https://github.com/bdcompton/cinf304_term_project"
+  },
+  "version": "1.0.0",
+  "orientation": "portrait",
+  "icon": "./assets/icon.png",
+  "splash": {
+    "image": "./assets/splash.png",
+    "resizeMode": "contain",
+    "backgroundColor": "#ffffff"
+  },
+  "updates": {
+    "fallbackToCacheTimeout": 0
+  },
+  "assetBundlePatterns": [
+    "**/*"
+  ],
+  "ios": {
+    "supportsTablet": true
+  },
+  "description": "",
+  "githubUrl": "https://github.com/bdcompton/cinf304_term_project"
 }
