--- a/locationfinder/package.json
+++ b/locationfinder/package.json
@@ -9,14 +9,13 @@
   },
   "dependencies": {
     "expo": "~37.0.3",
-    "react": "16.8.3",
+    "react": "^16.9.0",
     "react-dom": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-maps": "^0.27.1",
+    "react-native": "^0.61.5",
+    "react-native-maps": "^0.26.1",
+    "react-native-maps-directions": "^1.7.5",
     "react-native-web": "~0.11.7"
   },
-    
-
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
     "@babel/core": "^7.8.6"
