--- a/locationfinder/package.json
+++ b/locationfinder/package.json
@@ -14,6 +14,7 @@
     "react-native": "^0.61.5",
     "react-native-maps": "^0.26.1",
     "react-native-maps-directions": "^1.7.5",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
