--- a/locationfinder/package.json
+++ b/locationfinder/package.json
@@ -12,10 +12,13 @@
     "react": "^16.9.0",
     "react-dom": "16.8.3",
     "react-native": "^0.61.5",
+    "react-native-background-fetch": "^3.1.0",
+    "react-native-background-geolocation": "^3.7.0",
     "react-native-maps": "^0.26.1",
     "react-native-maps-directions": "^1.7.5",
     "react-native-material-dropdown": "^0.11.1",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "expo-location": "~8.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
