--- a/locationfinder/package.json
+++ b/locationfinder/package.json
@@ -1,28 +1,38 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "web": "expo start --web"
   },
   "dependencies": {
     "expo": "~37.0.3",
-    "react": "^16.9.0",
+    "expo-location": "^8.2.1",
+    "expo-permissions": "^9.0.1",
+    "expo-splash-screen": "^0.2.3",
+    "expo-updates": "^0.2.11",
+    "react": "~16.9.0",
     "react-dom": "16.8.3",
-    "react-native": "^0.61.5",
+    "react-native": "~0.61.5",
     "react-native-background-fetch": "^3.1.0",
     "react-native-background-geolocation": "^3.7.0",
+    "react-native-geolocation-service": "^5.0.0",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-maps": "^0.26.1",
     "react-native-maps-directions": "^1.7.5",
     "react-native-material-dropdown": "^0.11.1",
-    "react-native-web": "~0.11.7",
-    "expo-location": "~8.1.0"
+    "react-native-permissions": "^2.1.5",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-screens": "~2.2.0",
+    "react-native-unimodules": "~0.9.0",
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.6",
+    "babel-jest": "~25.2.6",
     "babel-preset-expo": "~8.1.0",
-    "@babel/core": "^7.8.6"
+    "jest": "~25.2.6",
+    "react-test-renderer": "~16.9.0"
   },
   "private": true
 }
